--- a/styles.css
+++ b/styles.css
@@ -66,3 +66,11 @@ button {
 button:hover {
     background-color: #0055cc;
 }
+
+.cancel-button {
+    background-color: #cc0000;
+}
+
+.cancel-button:hover {
+    background-color: #ff0000;
+}
