--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,12 @@ button:hover {
         flex-direction: row;
         justify-content: space-between;
     }
+
+    h1 {
+    text-align: center;
+    color: #003366;
+    margin-top: 15px;
+}
     
     .container {
         width: 48%;
