--- a/styles.css
+++ b/styles.css
@@ -89,6 +89,7 @@ button:hover {
     .main-container {
         flex-direction: row;
         justify-content: space-between;
+        margin-top: 15px;
     }
 
     h1 {
