--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,12 @@ button:hover {
 
 @media (max-width: 768px) {
     .main-container {
-        margin-top: 15px;
         padding-top: 20px;
+    }
+    
+    h1 {
+    text-align: center;
+    color: #003366;
+    margin-top: 15px;
     }
 }
