--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@ button:hover {
 
 @media (max-width: 768px) {
     .main-container {
-        padding-top: 20px;
+        margin-top: 25px;
     }
     
     h1 {
