--- a/styles.css
+++ b/styles.css
@@ -112,7 +112,7 @@ button:hover {
 }
 
 /* Dropdown Styles */
-#dropdown {
+/*#dropdown {
     position: relative;
     display: none;
     background-color: white;
@@ -132,4 +132,22 @@ button:hover {
 
 #dropdown div:hover {
     background-color: #e9e9e9;
+}*/
+
+/* For multiple searchbars */
+.dropdown-content {
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    border: 1px solid #d4d4d4;
+    z-index: 1;
+}
+
+.dropdown-content div {
+    padding: 12px 16px;
+    cursor: pointer;
+}
+
+.dropdown-content div:hover {
+    background-color: #ddd;
 }
