--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body {
 
 .main-container {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
     width: 100%;
