--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,7 @@ button:hover {
         width: 48%;
     }
 }
-
+/*
 @media (max-width: 768px) {
     .main-container {
         margin-top: 500px;
@@ -114,7 +114,7 @@ button:hover {
     margin-top: 10px;
     }
 }
-
+*/
 /* Search Bar Dropdown Styles */
 .dropdown-content {
     position: relative;
