--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
 .main-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
     width: 100%;
     max-width: 1200px;
 }
