--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,15 @@ label {
 }
 
 input[type="number"],
+select {
+    width: 40%;
+    padding: 10px;
+    margin-top: 5px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+}
+
 input[type="text"],
 input[type="email"],
 select {
