--- a/styles.css
+++ b/styles.css
@@ -43,12 +43,13 @@ label {
 
 input[type="number"],
 select {
-    width: 45%;
+    width: 40%;
     padding: 10px;
     margin-top: 5px;
     border: 1px solid #ccc;
     border-radius: 5px;
     box-sizing: border-box;
+    justify-content: space-between;
 }
 
 input[type="text"],
