--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,6 @@ select {
     border: 1px solid #ccc;
     border-radius: 5px;
     box-sizing: border-box;
-    justify-content: space-between;
 }
 
 input[type="text"],
@@ -61,6 +60,10 @@ select {
     border: 1px solid #ccc;
     border-radius: 5px;
     box-sizing: border-box;
+}
+
+.search-range {
+    justify-content: space-between;
 }
 
 .checkbox-group {
