--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,7 @@ select {
 .search-range {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .checkbox-group {
