--- a/styles.css
+++ b/styles.css
@@ -119,13 +119,16 @@ button:hover {
 @media (max-width: 767px) {
     body {
         background-color: white;
+        padding: 0;
+        width: 100%;
     }
 
     .container {
-        padding: 0px;
         border-radius: 0px;
         box-shadow: 0 0 0px rgba(0, 0, 0, 0);
-        margin: 10px;
+        padding: 10px;
+        margin: 0;
+        width: 100%;
     }
 }
 
