--- a/styles.css
+++ b/styles.css
@@ -124,8 +124,8 @@ button:hover {
 
     .container {
         width: 100%;
-        margin: 0;
-        padding-top: 25px; 
+        margin: 10px;
+        padding-top: 10px; 
     }
 }
 
