--- a/styles.css
+++ b/styles.css
@@ -118,15 +118,19 @@ button:hover {
 
 @media (max-width: 767px) {
     body {
-        margin: 0px 0px;
-        padding: 0px 0px;
         width: 100%;
+        margin-left: 0px;
+        margin-right: 0px;
+        padding-left: 0px; 
+        padding-right: 0px; 
     }
 
     .container {
         width: 100%;
-        margin: 0px 0px;
-        padding: 0px 0px; 
+        margin-left: 0px;
+        margin-right: 0px;
+        padding-left: 0px; 
+        padding-right: 0px; 
     }
 }
 
